cks/opa gatekeeper/allow-custom-registry.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: allow-only-prooved-registry
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
        
  parameters:
    repos:
      - "docker.io"
      - "k8s.gcr.io"
